--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>jadonlai/portfolio</title>
     <script src="http://localhost:8097"></script>
   </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
